removing unused imports and added some input validation